--- a/app/views/home/home-ctrl.html
+++ b/app/views/home/home-ctrl.html
@@ -1,4 +1,4 @@
 <div ng-controller="homeCtrl as ctrl">
-    <h1>Doreme</h1>
-    <h1>Hello {{ctrl.name}}</h1>
+    <h1>Home</h1>
+    <h2>Hello {{ctrl.name}}</h2>
 </div>
