add redux store

--- a/app/views/account/account.html
+++ b/app/views/account/account.html
@@ -1,4 +1,5 @@
 <div ng-controller="accountCtrl as ctrl">
     <h1>Account</h1>
     <h2>Welcome {{ctrl.name}}</h2>
+    <button ng-click="ctrl.setAccount($event)">Update</button>
 </div>
